3.2.10
	+ Redirect all /ews/ requests to OCSManager
3.2.9
	+ Make SOGo shared contacts display their CN
3.2.8
	+ Allow ActiveSync setup if z-push or sogo-activesync are installed
	+ Updated SOGo conf
	+ Added autodiscovery of server parameters
	+ Added noMultipleOUSupportComponent support
	+ Conflict with zentyal-zarafa to avoid problems with libmapi.so
3.2.7
	+ Prevent OpenChange provision if we don't have access to update the
	  schema or it's already extended by another OpenChange / Exchange
	  previous installation.
	+ Extracted vdomain selection for outgoing mail to a new configuration
	  model named Configuration
3.2.6
	+ Clean all previous data before enabling the module
3.2.5
	+ Fix regression hiding from module status
3.2.4
	+ Hide openchange service status from the dashboard and linked it status
	  to the one from Samba
3.2.3
	+ Fixed a typo that makes openchange appear always off on Dashboard
3.2.2
	+ Added vdomain selection for outgoing mail at provision screen
3.2.1
	+ Use Error instead of TryCatch::Lite
3.2
	+ Initial release