@@ -1,0 +1,15 @@
+/var/log/z-push/z-push.log {
+weekly
+missingok
+rotate 7
+compress
+notifempty
+}
+
+/var/log/z-push/z-push-error.log {
+weekly
+missingok
+rotate 7
+compress
+notifempty
+}
